k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mfg-dashboard
  labels:
    name: mfg-dashboard
    app: mfg-dashboard
